--- a/package.json
+++ b/package.json
@@ -13,9 +13,21 @@
     "@metaplex-foundation/mpl-core": "^1.1.1",
     "@metaplex-foundation/mpl-core-candy-machine": "^0.2.3",
     "@metaplex-foundation/mpl-core-das": "^0.0.3",
+    "@metaplex-foundation/mpl-token-metadata": "^3.3.0",
     "@metaplex-foundation/umi": "^0.9.2",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
-    "@solana/web3.js": "^1.95.4"
+    "@solana/web3.js": "^1.95.4",
+    "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1"
   },
-  "type": "module"
+  "type": "module",
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
+  }
 }
